# Stock-Data-Analysis

./: .gitignore
nse-quant-lab/: README.md  WITH EVERY PROMPT;.txt  pyproject.toml
nse-quant-lab/app/: __init__.py
nse-quant-lab/app/data/: fetcher.py  loader.py  nse_ingest.py
nse-quant-lab/app/engine/: base.py  indicators.py  strategies.py
nse-quant-lab/app/models/: __init__.py  db_config.py  models.py
nse-quant-lab/data/: .gitkeep  prices.duckdb
nse-quant-lab/docs/: progress.md  run_instructions.md
nse-quant-lab/scripts/: .gitkeep  duckdb_ddl.sql  postgres_ddl.sql  verify_db.py
nse-quant-lab/tests/: test_data_ingestion.py
