[project]
name = "nse-quant-lab"
version = "0.1.0"
description = "A Python-based quantitative trading research platform for the National Stock Exchange (NSE)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "vectorbt>=0.26.0",
    "backtesting>=0.3.3",
    "backtrader>=1.9.78.120",
    "TA-Lib>=0.4.28",
    "PyPortfolioOpt>=1.5.5",
    "ffn>=0.3.7",
    "pyfolio-reloaded>=0.9.5",
    "nsepy>=0.8",
    "nsepython>=0.0.1",
    "duckdb>=0.10.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "greenlet",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "streamlit>=1.32.0",
    "plotly>=5.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]

